Made a proper Arduino repository (src/ includes=)

--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=SPI library for ESP32 which use DMA buffer to send/receive transaction
 category=Communication
 url=https://github.com/hideakitai
 architectures=*
+includes=ESP32DMASPIMaster.h,ESP32DMASPISlave.h
